--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@
 
 <div ng-app="">
  
-<p>在输入框中尝试输入:</p>
-<p>姓名: <input type="text" ng-model="name"></p>
-<p ng-bind="name"></p>
+<p>北京小间科技发展有限公司业务涉及互联网、房产建设、智能家居硬件等。小间科技拥有雄厚的资金实力，正在组建一个高效、拼搏的团队。公司提供五险一金，对优秀的员工给予期权。</p>
 
 </div>
 
